@@ -2,27 +2,23 @@ package com.integracion.backend.services;
 
 import com.integracion.backend.dto.UserDTO;
 import com.integracion.backend.dto.converter.UserConverter;
+import com.integracion.backend.exception.ItemNotFoundException;
 import com.integracion.backend.model.User;
 import com.integracion.backend.repository.UserRepository;
 import jakarta.transaction.Transactional;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
+@AllArgsConstructor
 public class UserService {
 
     private final UserRepository userRepository;
     private final UserConverter userConverter;
-
-    @Autowired
-    public UserService(UserRepository userRepository, UserConverter userConverter){
-        this.userRepository = userRepository;
-        this.userConverter = userConverter;
-
-    }
 
     @Transactional
     public List<UserDTO> getListUsers() {
@@ -30,12 +26,17 @@ public class UserService {
             return userRepository.findAll() //hasta aca es jpa. las lineas siguientes es java puro
                     .stream()
                     .map(userConverter::convertUserToUserDTO) // es similar a: user -> userConverter.convertUserToUserDTO(user)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         catch(Exception e){
             throw e;
         }
+    }
 
+    @Transactional
+    public UserDTO getById(String id) {
+        var user = userRepository.findById(UUID.fromString(id)).orElseThrow(ItemNotFoundException::new);
+        return userConverter.convertUserToUserDTO(user);
     }
 
     @Transactional
